# rodroid-il2cppdumper

./: README.md  package-lock.json  package.json
.github/workflows/: ios.yml  maein.yml  main.yml
src/: app.css  app.html
src-tauri/: .gitattributes  2  Cargo.toml  config.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/dotnetdll-main/src/resolution/: write.rs
src-tauri/src/: config.rs  error.rs  lib.rs
src-tauri/src/disassembler/: arm.rs  mod.rs  x86.rs
src-tauri/src/executor/: custom_attribute_reader.rs  il2cpp_executor.rs
src-tauri/src/formats/: elf.rs  macho.rs  nso.rs  pe.rs  wasm.rs
src-tauri/src/il2cpp/: base.rs  field_layout.rs  mod.rs  structures.rs
src-tauri/src/io/: binary_stream.rs  version_aware.rs
src-tauri/src/output/: cpp_ast.rs  cpp_scaffolding.rs  cpp_type_dependency_graph.rs  cpp_type_model.rs  decompiler.rs  dummy_assembly_generator.rs  embedded_scripts.rs  generics.rs  header_manager.rs  mod.rs  name_mangler.rs  script_json.rs  static_field_exporter.rs  struct_generator.rs  unity_version.rs
src-tauri/src/search/: section_helper.rs
src-tauri/src/utils/: mod.rs  string_utils.rs
src/lib/: dumpEvents.ts  dumpLogs.ts  dumpRunner.ts  dumpState.ts  i18n.ts  stores.ts  types.ts
src/lib/components/: AboutScreen.svelte  AnimatedExpand.svelte  ConfigDialog.svelte  ConfigSwitch.svelte  CrashScreen.svelte  DumpingScreen.svelte  ErrorScreen.svelte  IdleScreen.svelte  InputDialog.svelte  PathInput.svelte  ResultScreen.svelte  SettingsScreen.svelte  SplashScreen.svelte
src/routes/: +layout.svelte  +page.svelte
